--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <div class="carousel-item">
       <img src="https://cdn.mos.cms.futurecdn.net/XHCrtmnmvsKu2m7x34XYqb.jpg" class="d-block w-100" alt="...">
     </div>
+       <div class="carousel-item">
+      <img src="https://cdn.wallpapersafari.com/85/52/rQCVay.jpg" class="d-block w-100" alt="...">
+    </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
