--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
        <div class="carousel-item">
       <img src="https://cdn.wallpapersafari.com/85/52/rQCVay.jpg" class="d-block w-100" alt="...">
     </div>
+       <div class="carousel-item">
+      <img src="https://cdn.wallpapersafari.com/76/29/AJSl73.jpg" class="d-block w-100" alt="...">
+    </div>
+      <div class="carousel-item">
+      <img src="" class="d-block w-100" alt="...">
+    </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
