--- a/index.html
+++ b/index.html
@@ -154,6 +154,6 @@ Anime-
 <br>
     <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
     <br>
-    <a class="lic" href="LICENSE.txt">View_License</a>
+    <center><a class="lic" href="LICENSE.txt">View_License</a></center>
 </body>
 </html>
