--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="https://megapng.com/images/bt/netflix-logo-12.png"><!-- JavaScript Bundle with Popper -->
+    <link rel="icon" type="image/x-icon" href=""><!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>">
     <title>Netflix</title>
     <!-- CSS only -->
@@ -46,7 +46,7 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-      <img src="https://megapng.com/images/bt/netflix-logo-12.png" class="d-block w-100" alt="...">
+      <img src="https://cdn.wallpapersafari.com/38/51/VlXh8z.jpg" class="d-block w-100" alt="...">
     </div>
        <div class="carousel-item">
       <img src="  https://cdn.wallpapersafari.com/66/91/NX0Tjo.jpg" class="d-block w-100" alt="...">
