--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function checkTime(i) {
   return i;
 }
 </script>
-<body>
+<body onload="startTime()">
     <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
