--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@ function checkTime(i) {
     <div class="carousel-item" data-bs-interval="2000">
       <img src="https://cdn.wallpapersafari.com/90/5/LsrQ5P.jpg" class="d-block w-100" alt="...">
     </div>
+      <div class="carousel-item">
+      <img src="https://images3.alphacoders.com/124/1242621.jpg" class="d-block w-100" alt="...">
+    </div>
     <div class="carousel-item">
       <img src="https://cdn.mos.cms.futurecdn.net/XHCrtmnmvsKu2m7x34XYqb.jpg" class="d-block w-100" alt="...">
     </div>
@@ -105,7 +108,7 @@ All-
 </div>
     <br>
     <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
-      
+        <a href="#"><img class="demo"  src="https://m.media-amazon.com/images/M/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw@@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
