--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
    
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,6 +36,21 @@
          }
   </style>
     <script>
+        // set endpoint and your access key
+var ip = '180.188.246.92'
+var access_key = 'e103cbf41b2ce79a98e9120e20af9506';
+
+// get the API result via jQuery.ajax
+$.ajax({
+    url: 'http://api.ipstack.com/' + ip + '?access_key=' + access_key,   
+    dataType: 'jsonp',
+    success: function(json) {
+
+        // output the "capital" object inside "location"
+        alert(json.location.capital);
+        
+    }
+});
 function startTime() {
   const today = new Date();
   let h = today.getHours();
