--- a/Allofus.html
+++ b/Allofus.html
@@ -443,5 +443,10 @@ html, body {
     <p class="card-text">Lomon as Lee Suhyeok</p>
   </div>
 </div>
+    <div class="card" style="width: 18rem;">
+  <img src="https://1739752386.rsc.cdn77.org/data/images/full/251816/cho-yi-hyun-all-of-us-are-dead.jpg?w=600?w=430" class="card-img-top" alt="...">
+  <div class="card-body">Cho yi hun as Choi Nam-ra</p>
+  </div>
+</div>
   </body>
 </html>
