--- a/Moneykr.html
+++ b/Moneykr.html
@@ -154,6 +154,11 @@
 </div> 
   <br><br>
   <h4>Cast</h4>
-  
+  <br>
+  <div class="card" style="width: 18rem;">
+  <img src="https://m.media-amazon.com/images/M/MV5BYWViYTZjODItYjU5ZS00YTc2LTliNTYtMTJmYjNhNGVlNjc3XkEyXkFqcGdeQXVyNTI5NjIyMw@@._V1_UY1200_CR135,0,630,1200_AL_.jpg" class="card-img-top" alt="...">
+  <div class="card-body">KimJiHoon as Denver/p>
+  </div>
+</div>
 </body>
 </html>
