--- a/Lookatme.html
+++ b/Lookatme.html
@@ -5,7 +5,16 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
-<iframe src="https://onedrive.live.com/embed?cid=D880E80A8D6286C5&resid=D880E80A8D6286C5%21106&authkey=AC-ppd65PJCJRnA" width="320" height="180" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<style>
+iframe {
+  display: block;
+margin-left: auto;
+ margin-right: auto;
+ width: 640px;
+ height: 480px;
+}
+</style>
+<iframe src="https://drive.google.com/file/d/1wcyzaqLJJV8LwqMCUfn66OOPphD4dkdo/preview" width="640" height="480" allow="autoplay"></iframe>
 
 </body>
 </html>
