--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ function checkTime(i) {
   </div>
       
 </nav><br><br>
+    <button type="button" class="btn btn-dark">Search</button><br><br>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
