--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function checkTime(i) {
   </div>
       
 </nav><br><br>
-    <button type="button" class="btn btn-dark">Search</button><br><br>
+   
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
@@ -122,6 +122,7 @@ function checkTime(i) {
   Enable Desktop view ****
 </div>
     <br><br>
+     <button type="button" class="btn btn-dark">Search</button><br>
    <div class="alert alert-dark" role="alert">
 All-
 </div>
