--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ function checkTime(i) {
   Enable Desktop view ****
 </div>
     <br><br>
-     <button type="button" class="btn btn-dark">Search</button><br><br>
+    <center><a href="Search.html"<button id="txt"type="button" class="btn btn-dark">Search</button></center><br><br>
    <div class="alert alert-dark" role="alert">
 All-
 </div>
