--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
          #txt {
              text-align: right;
          }
+          #xt {
+             text-align: right;
+         }
   </style>
     <script>
         // set endpoint and your access key
@@ -122,7 +125,7 @@ function checkTime(i) {
   Enable Desktop view ****
 </div>
     <br><br>
-    <center><a href="Search.html"<button id="txt"type="button" class="btn btn-dark">Search</button></center><br><br>
+    <center><a href="Search.html"><button id="xt"type="button" class="btn btn-dark">Search</button></a></center><br><br>
    <div class="alert alert-dark" role="alert">
 All-
 </div>
