--- a/Search.html
+++ b/Search.html
@@ -10,7 +10,27 @@
     
 </head>
 <body>
-
+    @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+           body {
+                           font-family: 'Poppins', sans-serif;
+         }
+                   .demo  {
+  width: 210px;
+  height: 360px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+                        }
+ <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
+     <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
+     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania">
+      <a href="revenge.txt"><img  class="demo" src="https://m.media-amazon.com/images/M/MV5BN2U4Yzg0ZTctYTMzMS00M2YwLTkxZDAtMzYwM2I0YTY2M2Q2XkEyXkFqcGdeQXVyMzE4MDkyNTA@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>                                                                                   
+    <a href="Un.html"><img  class="demo" src="Un.png" alt="Flowers in Chania"></a>
+           <a href="#"><img  class="demo" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTbpoUrCurs17HjSW-4RYSYJCo2zYRR1JIuogGzwzTpEz3YeImQ" alt="Flowers in Chania"></a>
+     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
+     <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
+       <a href="#"><img class="demo"  src="https://m.media-amazon.com/images/M/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw@@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>                                                                          
+     
 
 </body>
 </html>
