--- a/Search.html
+++ b/Search.html
@@ -9,7 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     
 </head>
-<body>
+<body><style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
            body {
                            font-family: 'Poppins', sans-serif;
