--- a/Search.html
+++ b/Search.html
@@ -28,7 +28,11 @@ body{
     background-color:#E0E0E0;
 }
   </style>
-
+li {
+  text-decoration: none;
+  }
+  
+  
 
 <div class="container">
     
