--- a/Search.html
+++ b/Search.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Search query </title>
+  <title>[Search query] </title>
    <script src="https://cdn.jsdelivr.net/npm/places.js@1.16.4"></script>
 
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
