--- a/Search.html
+++ b/Search.html
@@ -87,10 +87,11 @@ function myFunction() {
         if (txtValue.toUpperCase().indexOf(filter) > -1) {
             li[i].style.display = "";
         } else {
-            li[i].style.display = "none";
+            li[i].innerHTML= "No data ";
         }
     }
 }
 </script>
+  
 </body>
 </html>
