--- a/Search.html
+++ b/Search.html
@@ -5,7 +5,7 @@
   <title>[Search query] </title>
    <script src="https://cdn.jsdelivr.net/npm/places.js@1.16.4"></script>
 
-  <link rel="icon" type="image/x-icon" href="netflix.jpg">
+  <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyqzbfWS1c5z_ePFBa4bCWc_O-zqvRZ9j0jM0g1bZVB_mXMd5B-oB0B8QECtHTx517uro&usqp=CAU">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
@@ -25,6 +25,7 @@
 }
         li,a {
   text-decoration: none;
+          font-color: #000
   }
 body{
     background-color:#E0E0E0;
@@ -52,7 +53,7 @@ body{
 <ul id="myUL">
     <li><a href="Lookatme.html">Look at me: XXXTentacion</a></li>
        <li><a href="Allofus.html">All of us are dead</a></li>
-          <li><a href="#">Crash LAnding on you</a></li>
+          <li><a href="#">Crash Landing on you</a></li>
   <li><a href="Money.html">Money Heist</a></li>
   <li><a href="Moneykr.html">Money Heist korea: Joint economic area</a></li>
   <li><a href="Purple.html">Purple Hearts</a></li>
