--- a/index.html
+++ b/index.html
@@ -206,5 +206,7 @@ Anime-
     <br>
     <center><a class="lic" href="LICENSE.txt">View_License</a></center>
     <div id="txt"></div>
+         <br><br>
+         <center><h6>Copyright @Shujaat09</h6></center>
 </body>
 </html>
