--- a/Search.html
+++ b/Search.html
@@ -93,6 +93,6 @@ function myFunction() {
     }
 }
 </script>
-  <center><p>Copyright 2022 @Shujaat09</center></p>
+  <center><p>Copyright 2022 @Shujaat09</p></center>
 </body>
 </html>
