--- a/Search.html
+++ b/Search.html
@@ -25,7 +25,7 @@
 }
         li,a {
   text-decoration: none;
-          font-color: #000
+          font-color: #000;
   }
 body{
     background-color:#E0E0E0;
