--- a/Search.html
+++ b/Search.html
@@ -26,6 +26,7 @@
         li,a {
   text-decoration: none;
           font-color: #000;
+          link-color: #000;
   }
 body{
     background-color:#E0E0E0;
