--- a/Search.html
+++ b/Search.html
@@ -23,11 +23,14 @@
     
     margin-top:100px;
 }
-        li,a {
+        li {
   text-decoration: none;
           font-color: #000;
-          link-color: #000;
-  }
+      }
+      a {
+        text-decoration: none;
+        color: black;
+      }
 body{
     background-color:#E0E0E0;
 }
