--- a/Search.html
+++ b/Search.html
@@ -92,7 +92,7 @@ function myFunction() {
         if (txtValue.toUpperCase().indexOf(filter) > -1) {
             li[i].style.display = "";
         } else {
-            li[i].innerHTML= "No data ";
+            li[i].style.display= "none";
         }
     }
 }
