--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Netflix</title>
  
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-   
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +17,7 @@
     </head>
       
      <style>
+         
          @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
            body {
                            font-family: 'Poppins', sans-serif;
@@ -36,6 +37,10 @@
          }
           #xt {
              text-align: right;
+         }
+         .git {
+             text-decoration: none;
+             text-align: left;
          }
   </style>
     <script>
@@ -206,6 +211,9 @@ Anime-
     <br>
     <center><a class="lic" href="LICENSE.txt">View_License</a></center>
     <div id="txt"></div>
+         <br>
+         <a class="git"href="#"><i class="bi bi-github"></i></a>
+         <center><a href="#"><i class="bi bi-telegram"></i></a></center>
          <br><br>
          <center><h6>Copyright @Shujaat09</h6></center>
 </body>
