--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
          .git {
              text-decoration: none;
              text-align: left;
+             color: #000;
+              width:50px;
+                 height: 50px;
+         }
+         .tg {
+              text-decoration: none;
+             color: #000;
+             width:50px;
+                 height: 50px;
          }
   </style>
     <script>
@@ -213,7 +222,7 @@ Anime-
     <div id="txt"></div>
          <br>
          <a class="git"href="#"><i class="bi bi-github"></i></a>
-         <center><a href="#"><i class="bi bi-telegram"></i></a></center>
+         <center><a href="#" class="tg"><i class="bi bi-telegram"></i></a></center>
          <br><br>
          <center><h6>Copyright @Shujaat09</h6></center>
 </body>
