--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
          }
   </style>
     <script>
-     
+     var fs = require('fs');
+
+//create a file named mynewfile1.txt:
+fs.appendFile('mynewfile1.txt', 'Hello content!', function (err) {
+  if (err) throw err;
+  console.log('Saved!');
+});
+
 function startTime() {
   const today = new Date();
   let h = today.getHours();
