--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
          }
   </style>
     <script>
-     var fs = require('fs');
-
-//create a file named mynewfile1.txt:
-fs.appendFile('mynewfile1.txt', 'Hello content!', function (err) {
-  if (err) throw err;
-  console.log('Saved!');
-});
+    
 
 function startTime() {
   const today = new Date();
@@ -91,6 +85,9 @@ function checkTime(i) {
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
+      <img src="https://6.vikiplatform.com/image/58e7f7c48a794992811b1e97f3a453cb.jpg?x=b&a=0x0" class="d-block w-100" alt="...">
+    </div>
+          <div class="carousel-item">
       <img src="https://www.myfreewalls.com/public/uploads/preview/xxxtentacion-there-is-no-end-to-the-pain-4k-wallpaper-11624395908pcwpleur4z.jpg" class="d-block w-100" alt="...">
     </div>
        <div class="carousel-item">
