--- a/Lookatme.html
+++ b/Lookatme.html
@@ -14,7 +14,7 @@ margin-left: auto;
  height: 480px;
 }
 </style>
-<iframe src="<iframe src="https://drive.google.com/file/d/1wcyzaqLJJV8LwqMCUfn66OOPphD4dkdo/preview" width="640" height="480" allowfullscreen ></iframe>"></iframe>
+<iframe src="https://drive.google.com/file/d/1wcyzaqLJJV8LwqMCUfn66OOPphD4dkdo/preview" width="640" height="480" allowfullscreen ></iframe>">
 
 </body>
 </html>
