--- a/season1UF.html
+++ b/season1UF.html
@@ -196,14 +196,14 @@ html, body {
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="Un.png" />
-      <h1>Episode-1</h1>
+      <h1>Episode-2</h1>
       <h4>2016, K-Drama</h4>
       <span class="minutes">78 min</span>
       <p class="type">Romance</p>
     </div>
     <div class="movie_desc">
       <p class="text">
-   Joon Young has trouble accepting reality and rebels where he can; No Eul accepts an envelope of hush money and loses more than her integrity.
+  Ten years ago, Joon Young and Eul met as teenagers and some unfortunate events caused them to become estranged.
       </p>
     </div>
     <div class="movie_social">
