--- a/Money.html
+++ b/Money.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <br><br>
-  <a href="season1MH.html"><button type="button" class="btn btn-light">Season-1</button></a>
+  <a href="season1MH.html"><button type="button" class="btn btn-light">Season-1</button></a><br><br>
    <a href="season2MH.html"><button type="button" class="btn btn-light">Season-2</button></a>
   <br><br>
   
