--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ All-
     <br>
      <a href="Lookatme.html"><img class="demo"  src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTw22AS5z4oREaoIz_wunpVCjZejn8wxso92reSC1RkZUgzAsMg" alt="Flowers in Chania"></a>
     <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
-        <a href="#"><img class="demo"  src="https://m.media-amazon.com/images/M/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw@@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
+        <a href="crash.html"><img class="demo"  src="https://m.media-amazon.com/images/M/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw@@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
     <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
