--- a/revenge.html
+++ b/revenge.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   
-  <a href="#"><button type="button" class="btn btn-light">Season-1</button></a>
+  <a href="revenges1.html"><button type="button" class="btn btn-light">Season-1</button></a>
 
 </body>
 </html>
