--- a/revenge.html
+++ b/revenge.html
@@ -9,7 +9,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </head>
 <body>
-  
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+    * {
+      font-family: 'Poppins', sans-serif;
+    }
+</style>
+  <h5>Sweet Revenge</h5>
   <a href="revenges1.html"><button type="button" class="btn btn-light">Season-1</button></a>
 
 </body>
