--- a/extraordinarys1.html
+++ b/extraordinarys1.html
@@ -198,7 +198,7 @@ html, body {
   </style>
  
   <br><br>
-  <a class="Dead" href="#"><div class="movie_card" id="bright">
+  <a class="Dead" href="https://shujaat09.github.io/apps.github.io/episode1.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="https://image.tmdb.org/t/p/original/35srGT8ZqqSNsrwmDzBjnyfSNsQ.jpg"/>
