--- a/extraordinary.html
+++ b/extraordinary.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <br><br>
-  <a href="#"><button type="button" class="btn btn-light">Season-1</button></a>
+  <a href="extraordinary.html"><button type="button" class="btn btn-light">Season-1</button></a>
   
   <br><br>
   
