--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 document.addEventListener('contextmenu', 
                         event => event.preventDefault());
                 el_down.innerHTML = "Right click disabled";
-            }         
+            } 
+        gfg_Run()
 
 function startTime() {
   const today = new Date();
