--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ function checkTime(i) {
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
+      <img src="https://images.sr.roku.com/idType/roku/context/global/id/06b071ca6aa55c7784594d9386012ce8/images/partner/prod/dmr/show/thumbnails/widescreen/360x203/revenge_note_key.jpg/magic/396x0/filters:quality(70)" class="d-block w-100" alt="...">
+    </div>
+        <div class="carousel-item">
       <img src="https://6.vikiplatform.com/image/58e7f7c48a794992811b1e97f3a453cb.jpg?x=b&a=0x0" class="d-block w-100" alt="...">
     </div>
           <div class="carousel-item">
