--- a/under.html
+++ b/under.html
@@ -5,13 +5,10 @@
     </head>
     <body>
         <code>Server down for repair Error code[226]</code>
-        <p>Start time</p><p id="demo"></p>
+        <p>Start time::::</p>
+        <p id="demo"></p>
         <script>
-            function displayDate() {
-                return Date();
-            };
-            }
-         displayDate();
+         document.getElementById("demo").innerHTML = Date();
         </script>
     </body>
 </html>
