--- a/under.html
+++ b/under.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <code>Server down for repair Error code[226]</code>
-        <p>Start time::::</p>
+        <code><p>Start time::::</p></code>
         <code><p id="demo"></p></code>
                 <code><p id="demo2"></p></code>
         <script>
