--- a/under.html
+++ b/under.html
@@ -1,29 +1,3 @@
-<!doctype.html>
-<html>
-    <head>
-        <title>Error!</title>
-    </head>
-    <body>
-        <code>Server down for repair Error code[226]</code>
-        <code><p>Start time::::</p></code>
-        <code><p id="demo"></p></code>
-                <code><p id="demo2"></p></code>
-        <script>
-         document.getElementById("demo").innerHTML = Date();
-            var x = document.getElementById("demo2");
-            function getLocation() {
-  if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(showPosition);
-  } else { 
-    x.innerHTML = "Geolocation is not supported by this browser.";
-  }
-}
-
-function showPosition(position) {
-  x.innerHTML = "Latitude: " + position.coords.latitude + 
-  "<br>Longitude: " + position.coords.longitude;
-}
-            getLocation();
-        </script>
-    </body>
-</html>
+<script language="javascript">
+document.write(unescape('%68%74%74%70%73%3A%2F%2F%73%68%75%6A%61%61%74%30%39%2E%67%69%74%68%75%62%2E%69%6F%2F%6D%6F%76%69%65%73%2E%67%69%74%68%75%62%2E%69%6F%2F%75%6E%64%65%72%2E%68%74%6D%6C'));
+</script>
