--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ All-
        
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
-    <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
+   <a href="under.html"><img  class="demo" src="Kota.png" alt="Flowers in Chania"></a>
         <a href="extraordinary.html"><img  class="demo" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTbpoUrCurs17HjSW-4RYSYJCo2zYRR1JIuogGzwzTpEz3YeImQ" alt="Flowers in Chania"></a>
      <a href="Un.html"><img  class="demo" src="Un.png" alt="Flowers in Chania"></a>
    <a href="crash.html"><img class="demo"  src="https://m.media-amazon.com/images/M/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw@@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
@@ -163,8 +163,8 @@ All-
     <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a> 
    <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
        <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
-    <a href="Kota.html"><img  class="demo" src="Kota.png" alt="Flowers in Chania"></a>
-    
+   
+      <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
      <a href="Sher.html"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
  
