--- a/season2KF.html
+++ b/season2KF.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Kota Factory Season 2</title>
+  <link rel="stylesheet" href="verse.css">
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -10,20 +11,6 @@
 </head>
 <body>
     </head>
-<style>
-img {
-  width: 140px;
-  height: 240px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-  .btn btn-primary {
-         display: block;
-  margin-left: auto;
-  margin-right: auto;
-  }
-  </style>
   <img src="Kota.png" alt="Paris">
   <br><br>
   
