--- a/season2KF.html
+++ b/season2KF.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Kota Factory Season 2</title>
-  <link rel="stylesheet" href="verse.css">
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -11,11 +10,27 @@
 </head>
 <body>
     </head>
-  <img src="Kota.png" alt="Paris">
-  <br><br>
-  
-  <a href="https://drive.google.com/file/d/1QpYVYisrdxUqitzym6psMlmr0E_8ZWp6/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
-            <br><br>
+<a class="Dead" href="https://drive.google.com/file/d/1QpYVYisrdxUqitzym6psMlmr0E_8ZWp6/view?usp=sharing"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="Kota.png" />
+      <h1>Episode-1</h1>
+      <h4>2019, Drama</h4>
+      <span class="minutes">78 min</span>
+      <p class="type">Romance</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+With their new classes off to a bleak start, Vaibhav and his peers question the value of the IIT dream and seek inspiration from a trusted source..
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
+ 
   
   
 </body>
