--- a/season2KF.html
+++ b/season2KF.html
@@ -9,7 +9,11 @@
   
 </head>
 <body>
-    </head>
+   <style>
+     .bright_back {
+  background: url("https://qph.cf2.quoracdn.net/main-qimg-3e10b9c14d15c2405d2618af306660cc-lq");
+}
+     </style>
 <a class="Dead" href="https://drive.google.com/file/d/1QpYVYisrdxUqitzym6psMlmr0E_8ZWp6/view?usp=sharing"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
