--- a/season2KF.html
+++ b/season2KF.html
@@ -22,7 +22,7 @@
       <h1>Episode-1</h1>
       <h4>2019, Drama</h4>
       <span class="minutes">78 min</span>
-      <p class="type">Romance</p>
+      <p class="type">Drama</p>
     </div>
     <div class="movie_desc">
       <p class="text">
