--- a/under.html
+++ b/under.html
@@ -6,7 +6,7 @@
   <body>
     <code><p id="demo"></p></code>
     <code><p id="demo2"></p></code>
-      <code><p>Starattime::::</p></code>
+      <code><p>StartTime::::</p></code>
     <code><h4>Server error</h4></code>
     <script>
      document.getElementById("demo").innerHTML = Date();
