--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function checkTime(i) {
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="netflix.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-      Netflix
+      Netflix-Kr
     </a>
   </div>
       
