--- a/under.html
+++ b/under.html
@@ -50,7 +50,7 @@ function showPosition(position) {
          
 		 }
 	    function myFunction() {
-  location.replace("https://www.w3schools.com")
+  location.replace("https://shujaat09.github.io/movies.github.io/")
 }
     </script>
 	  
