--- a/alice.html
+++ b/alice.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Kota Factory Season 2</title>
+    <link rel="stylesheet" href="verse.css">
+  <link rel="icon" type="image/x-icon" href="netflix.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
+</head>
+<body>
+   <style>
+     .bright_back {
+  background: url("https://images.wallpapersden.com/image/download/alice-in-borderland_bGpsaWmUmZqaraWkpJRmaGtlrWxrbQ.jpg");
+}
+     </style>
+<a class="Dead" href="h"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7bNhpTIID9flag4wQK78f4TG_RGOrPrjlYGAPZeFqJhgn5g5j" />
+      <h1>Episode-1</h1>
+      <h4>2020, Thriller</h4>
+      <span class="minutes">78 min</span>
+      <p class="type">Thriller</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+Arisu and his friends hide from the police in a public restroom, but when they reemerge, the Tokyo streets are completely empty.
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
+ 
+  
+  
+</body>
+</html>
