--- a/Search.html
+++ b/Search.html
@@ -61,6 +61,8 @@ body{
   <li><a href="Money.html">Money Heist</a></li>
   <li><a href="Moneykr.html">Money Heist korea: Joint economic area</a></li>
   <li><a href="Purple.html">Purple Hearts</a></li>
+    <li><a href="alice.html">Alice in borderland</a></li>
+  <li><a href="under.html">Hotel del luna</a></li>
   <li><a href="Squid.html">Squid game</a></li>
   <li><a href="Un.html">Uncontrollably fond</a></li>
 <li><a href="#">Extraordinary Attorney Woo</a></li>
