--- a/hotel.html
+++ b/hotel.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
   </head>
-  <title>Peaky Blinders</title>
+  <title>Hotel Del Luna</title>
 <body> 
   <br><br>
-   <a href="https://drive.google.com/file/d/1x_Wb3zuY8hdEH2ULpm7uatMymb0jnTeT/view?usp=sharing"><button type="button" class="btn btn-light">Episode-1</button></a>
+   <a href="season1HDL.html"><button type="button" class="btn btn-light">Season--1</button></a>
   
   
 
