--- a/Search.html
+++ b/Search.html
@@ -57,15 +57,15 @@ body{
 <ul id="myUL">
     <li><a href="Lookatme.html">Look at me: XXXTentacion</a></li>
        <li><a href="Allofus.html">All of us are dead</a></li>
-          <li><a href="#">Crash Landing on you</a></li>
+          <li><a href="under.html">Crash Landing on you</a></li>
   <li><a href="Money.html">Money Heist</a></li>
   <li><a href="Moneykr.html">Money Heist korea: Joint economic area</a></li>
   <li><a href="Purple.html">Purple Hearts</a></li>
     <li><a href="alice.html">Alice in borderland</a></li>
-  <li><a href="under.html">Hotel del luna</a></li>
+  <li><a href="hotel.html">Hotel del luna</a></li>
   <li><a href="Squid.html">Squid game</a></li>
   <li><a href="Un.html">Uncontrollably fond</a></li>
-<li><a href="#">Extraordinary Attorney Woo</a></li>
+<li><a href="extraordinary.html">Extraordinary Attorney Woo</a></li>
   <li><a href="Train.html">Train to Busan</a></li>
    <li><a href="Bus.html">Business proposal</a></li>
     <li><a href="Fire.html">FireStarter</a></li>
