--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ All-
     <br>
      <a href="Lookatme.html"><img class="demo"  src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTw22AS5z4oREaoIz_wunpVCjZejn8wxso92reSC1RkZUgzAsMg" alt="Flowers in Chania"></a>
     <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
-      <a href="under.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSBPzapGGktvQtObSwrqFsarOC9_ZWISZFhUnen8FZBBu-s4Hvu" alt="Flowers in Chania"></a>
+      <a href="hotel.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSBPzapGGktvQtObSwrqFsarOC9_ZWISZFhUnen8FZBBu-s4Hvu" alt="Flowers in Chania"></a>
   <a href="revenge.html"><img  class="demo" src="https://m.media-amazon.com/images/M/MV5BN2U4Yzg0ZTctYTMzMS00M2YwLTkxZDAtMzYwM2I0YTY2M2Q2XkEyXkFqcGdeQXVyMzE4MDkyNTA@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
 <a href="alice.html"><img  class="demo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7bNhpTIID9flag4wQK78f4TG_RGOrPrjlYGAPZeFqJhgn5g5j" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
@@ -186,7 +186,7 @@ Korean-
     <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
      <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a>
      <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania">
-      <a href="revenge.html"><img  class="demo" src="https://m.media-amazon.com/images/M/MV5BN2U4Yzg0ZTctYTMzMS00M2YwLTkxZDAtMzYwM2I0YTY2M2Q2XkEyXkFqcGdeQXVyMzE4MDkyNTA@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>                                                                                   
+      <a href="revenge.html"><img  class="demo" src="https://m.media-amazon.com/images/M/MV5BN2U4Yzg0ZTctYTMzMS00M2YwLTkxZDAtMzYwM2I0YTY2M2Q2XkEyXkFqcGdeQXVyMzE4MDkyNTA@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>                     <a href="hotel.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSBPzapGGktvQtObSwrqFsarOC9_ZWISZFhUnen8FZBBu-s4Hvu" alt="Flowers in Chania"></a>                                                                
     <a href="Un.html"><img  class="demo" src="Un.png" alt="Flowers in Chania"></a>
            <a href="#"><img  class="demo" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTbpoUrCurs17HjSW-4RYSYJCo2zYRR1JIuogGzwzTpEz3YeImQ" alt="Flowers in Chania"></a>
      <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
