--- a/season1HDL.html
+++ b/season1HDL.html
@@ -192,7 +192,7 @@ html, body {
     }
   </style>
  
-  <a class="Dead" href="#"><div class="movie_card" id="bright">
+  <a class="Dead" href="https://shujaat09.github.io/hoteldellunas.github.io/episode1.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSBPzapGGktvQtObSwrqFsarOC9_ZWISZFhUnen8FZBBu-s4Hvu" />
