--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
              width:50px;
                  height: 50px;
          }
-       #thnx {
-         text-align: left;
-               width:100px;
-           height:100px;
+       #img1 {
+        border-radius: 50%;
        }
          #thnx2 {
          text-align: center;
@@ -159,6 +157,7 @@ function checkTime(i) {
 </div>
     <br><br>
     <center><a href="Search.html"><button id="xt"type="button" class="btn btn-dark">Search</button></a></center><br><br>
+  <img id="img1" src="https://i.pcmag.com/imagery/reviews/05cItXL96l4LE9n02WfDR0h-5..v1582751026.png">
    <div class="alert alert-dark" role="alert">
 All-
 </div>
