--- a/index.html
+++ b/index.html
@@ -157,7 +157,21 @@ function checkTime(i) {
 </div>
     <br><br>
     <center><a href="Search.html"><button id="xt"type="button" class="btn btn-dark">Search</button></a></center><br><br>
-  <img id="img1" src="https://i.pcmag.com/imagery/reviews/05cItXL96l4LE9n02WfDR0h-5..v1582751026.png">
+ <br>
+  <div id="banner" style="overflow: hidden; display: flex; justify-content:space-around;">
+        <div class="" style="max-width: 20%; max-height: 20%;">
+            <img id="img1" src ="https://i.pcmag.com/imagery/reviews/05cItXL96l4LE9n02WfDR0h-5..v1582751026.png">
+        </div>
+
+        <div class="" style="max-width: 100%; max-height: 100%;">
+            <img src ="img2.jpg">
+        </div>
+
+        <div class="" style="max-width: 20%; max-height: 20%;">
+            <img src ="img3.jpg">
+        </div>
+    </div>
+  <br>
    <div class="alert alert-dark" role="alert">
 All-
 </div>
