--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                  height: 50px;
          }
        #img1 {
-        border-radius: 50%;
+        border-radius: 50px;
        }
          #thnx2 {
          text-align: center;
