--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
          }
        #img1 {
         border-radius: 50px;
+         width:200px;
+         height: 100px;
        }
          #thnx2 {
          text-align: center;
