--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                  height: 50px;
          }
        #img1 {
-        border-radius: 50px;
+        border-radius: 10px;
          width:200px;
          height: 100px;
        }
@@ -166,11 +166,11 @@ function checkTime(i) {
         </div>
 
         <div class="" style="max-width: 100%; max-height: 100%;">
-            <img src ="img2.jpg">
+            <img  id="img1" src ="https://i.insider.com/55f0a291dd08957b5a8b46f6?width=750&format=jpeg&auto=webp">
         </div>
 
         <div class="" style="max-width: 20%; max-height: 20%;">
-            <img src ="img3.jpg">
+            <img id="img1" src ="https://m.media-amazon.com/images/G/01/primevideo/seo/primevideo-seo-logo.png">
         </div>
     </div>
   <br>
