--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ function checkTime(i) {
         </div>
 
         <div class="" style="max-width: 100%; max-height: 100%;">
-            <img  id="img1" src ="https://i.insider.com/55f0a291dd08957b5a8b46f6?width=750&format=jpeg&auto=webp">
+            <img  id="img1" src ="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Apple_TV_Plus_Logo.svg/800px-Apple_TV_Plus_Logo.svg.png">
         </div>
 
         <div class="" style="max-width: 20%; max-height: 20%;">
