--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ function checkTime(i) {
         </div>
 
         <div class="" style="max-width: 100%; max-height: 100%;">
-            <img  id="img1" src ="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Apple_TV_Plus_Logo.svg/800px-Apple_TV_Plus_Logo.svg.png">
+            <img  id="img1" src ="https://www.apple.com/v/apple-tv-plus/ab/images/meta/apple-tv__e7aqjl2rqzau_og.png">
         </div>
 
         <div class="" style="max-width: 20%; max-height: 20%;">
