--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
        #yu {
          align: left;
        }
+           #hi {
+             display: none;
+           }
   </style>
     <script>
 
@@ -94,9 +97,9 @@ function checkTime(i) {
   if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
   return i;
 }
-     
+             
 </script>
-<body onload="startTime()">
+<body id="hi"  onload="startTime()">
     <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
