--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ function checkTime(i) {
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-      <img src="https://cdn.wallpapersafari.com/90/5/LsrQ5P.jpg" class="d-block w-100" alt="...">
+      <img src="https://i.ytimg.com/vi/1GgKXR_J-ww/maxresdefault.jpg" class="d-block w-100" alt="...">
     </div>
       <div class="carousel-item">
       <img src="https://images6.alphacoders.com/119/1191374.jpg" class="d-block w-100" alt="...">
