--- a/pachinko.html
+++ b/pachinko.html
@@ -1,18 +1,42 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <title>Pachinko</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="verse.css">
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   
 </head>
 <body>
-<br><br>
+   <style>
+     .bright_back {
+  background: url("https://images8.alphacoders.com/122/thumb-1920-1220883.png");
+}
+     </style>
+<a class="Dead" href="#"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" />
+      <h1>Episode-1</h1>
+      <h4>2019, Drama</h4>
+      <span class="minutes">78 min</span>
+      <p class="type">Drama</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+With their new classes off to a bleak start, Vaibhav and his peers question the value of the IIT dream and seek inspiration from a trusted source..
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
+ 
   
-  <br><br>
   
 </body>
 </html>
