--- a/pachinko.html
+++ b/pachinko.html
@@ -20,13 +20,13 @@
     <div class="movie_header">
       <img class="locandina" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" />
       <h1>Episode-1</h1>
-      <h4>2019, Drama</h4>
+      <h4>2022, Drama</h4>
       <span class="minutes">78 min</span>
       <p class="type">Drama</p>
     </div>
     <div class="movie_desc">
       <p class="text">
-With their new classes off to a bleak start, Vaibhav and his peers question the value of the IIT dream and seek inspiration from a trusted source..
+Sunja discovers surprising new details about Hansu and Solomon looks to his grandmother for some assistance.
       </p>
     </div>
     <div class="movie_social">
