--- a/pachinko.html
+++ b/pachinko.html
@@ -15,7 +15,7 @@
   background: url("https://images8.alphacoders.com/122/thumb-1920-1220883.png");
 }
      </style>
-<a class="Dead" href="#"><div class="movie_card" id="bright">
+<a class="Dead" href="https://shujaat09.github.io/pachinko.github.io/episode3.html"><div class="movie_card" id="bright">
   <div class="info_section">
     <div class="movie_header">
       <img class="locandina" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" />
