--- a/Search.html
+++ b/Search.html
@@ -78,6 +78,8 @@ body{
     <li><a href="peaky.html">Peaky Blinders</a></li>
  <li><a href="revenge.html">Sweet Revenge</a></li>
     <li><a href="Conj.html">The Conjuring</a></li>
+    <li><a href="pachinko.html">Pachinko</a></li>
+    <li><a href="under.html">Attack on titans</a></li>
   </ul>
   
  
