--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
+                     
                         }
          .lic {
              font-family: 'Poppins', sans-serif;
@@ -74,6 +75,9 @@
        }
            #hi {
              display: none;
+           }
+           #Allof {
+             visibility: none;
            }
   </style>
     <script>
@@ -169,7 +173,7 @@ All-
     <br>
     <a href="pachinko.html"><img class="demo"  src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" alt="Flowers in Chania"></a>
      <a href="Lookatme.html"><img class="demo"  src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTw22AS5z4oREaoIz_wunpVCjZejn8wxso92reSC1RkZUgzAsMg" alt="Flowers in Chania"></a>
-    <a href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
+    <a id="Allof" href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
  
       <a href="hotel.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSBPzapGGktvQtObSwrqFsarOC9_ZWISZFhUnen8FZBBu-s4Hvu" alt="Flowers in Chania"></a>
   <a href="revenge.html"><img  class="demo" src="https://m.media-amazon.com/images/M/MV5BN2U4Yzg0ZTctYTMzMS00M2YwLTkxZDAtMzYwM2I0YTY2M2Q2XkEyXkFqcGdeQXVyMzE4MDkyNTA@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
